--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       
      </header>
    
-   
+     <div>
+        <!-- this is a comment -->    
+     </div>
      <h1> Annika Ho <h1>
    
    
